--- a/Healthcare020.OAuth/Healthcare020.OAuth.csproj
+++ b/Healthcare020.OAuth/Healthcare020.OAuth.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Healthcare020.LoggerService\Healthcare020.LoggerService.csproj" />
     <ProjectReference Include="..\HealthCare020.Services\HealthCare020.Services.csproj" />
   </ItemGroup>
 
