--- a/Healthcare020.WinUI/App.config
+++ b/Healthcare020.WinUI/App.config
@@ -34,10 +34,10 @@
   <userSettings>
     <Healthcare020.WinUI.Properties.Settings>
       <setting name="ApiUrl" serializeAs="String">
-        <value>https://localhost:5001/api/</value>
+        <value>https://healthcare020-api.com:5001/api/</value>
       </setting>
       <setting name="IdpTokenEndpoint" serializeAs="String">
-        <value>https://localhost:5005/connect/token</value>
+        <value>https://healthcare020-oauth.com:5005/connect/token</value>
       </setting>
       <setting name="IdpClientId" serializeAs="String">
         <value>Healthcare020_WebAPI</value>
