--- a/Healthcare020.OAuth/Properties/launchSettings.json
+++ b/Healthcare020.OAuth/Properties/launchSettings.json
@@ -1,12 +1,18 @@
-﻿{
+{
   "profiles": {
     "Healthcare020.OAuth": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:5005;http://localhost:5006",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5007;http://localhost:5006"
+    },
+    "Healthcare020.OAuth_Prod": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://healthcare020-oauth.com/"
     }
   }
 }
