--- a/Healthcare020.WinUI/Properties/Settings.settings
+++ b/Healthcare020.WinUI/Properties/Settings.settings
@@ -9,10 +9,10 @@
       <Value Profile="(Default)">https://healthcare020-oauth.com:5005/connect/token</Value>
     </Setting>
     <Setting Name="IdpClientId" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Healthcare020_WebAPI</Value>
+      <Value Profile="(Default)">Healthcare020_Desktop</Value>
     </Setting>
     <Setting Name="IdpClientSecret" Type="System.String" Scope="User">
-      <Value Profile="(Default)">devsecret</Value>
+      <Value Profile="(Default)">devsecret_desktop</Value>
     </Setting>
     <Setting Name="RegistryKey" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Software\\Healthcare020</Value>
