Implemented logic for validation of input fields. Applied logic on the Register page when creating a new user account for the patient.

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
@@ -34,7 +34,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\AppResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\LargeDevicesStyle.xaml">
@@ -48,6 +48,9 @@
     </EmbeddedResource>
     <EmbeddedResource Update="Themes\LightTheme.xaml">
       <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\BaseValidationContentPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ChangePasswordPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
