MOBILE: Implemented a notification service in a shared project and it determines whether notifications will be displayed using ACRUserDialogs (UWP) or AndHUD notifications (Android). Completed with the implementation of user registration functionality.

--- a/Healthcare020.Mobile/Healthcare020.Mobile.Android/Healthcare020.Mobile.Android.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.Android/Healthcare020.Mobile.Android.csproj
@@ -58,8 +58,8 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.446</Version>
     </PackageReference>
-    <PackageReference Include="LiveXAML">
-      <Version>2.1.73</Version>
+    <PackageReference Include="Plugin.CurrentActivity">
+      <Version>2.1.0.4</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Buttons">
       <Version>18.1.0.59</Version>
@@ -89,7 +89,9 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Hud.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MainApplication.cs" />
     <Compile Include="Renderers\BorderlessEntryRenderer.cs" />
     <Compile Include="Renderers\CustomTabbedPageRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -192,6 +194,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\healthcare020_150x150_revert.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
