--- a/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
@@ -67,6 +67,9 @@
     <EmbeddedResource Update="Views\PacijentDasbhboardTabbedPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PosetaPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PreglediMainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
