--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+appsettings.Production.json
 appsettings.Development.json
 
 # Visual Studio 2015/2017 cache/options directory
