--- a/HealthCare020.API/appsettings.Production.json
+++ b/HealthCare020.API/appsettings.Production.json
@@ -9,5 +9,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=HealthCare020;User=fahirmdz;Password=Test123;"
+  },
+  "ServicesConfiguration": {
+    "SMSGatewayConfiguration": {
+      "APIKey": "8fe86b05",
+      "APISecret": "p5xQRwb8BV5oZsdr",
+      "SignatureSecret": "Sd2vCYct4pgZpSL1ixpd5HTukpdgwXAnqeKZem7ZLF5srBBV9D"
+    },
+    "TelegramBot": {
+      "Token": "1100475871:AAGEHU02klrvwsCl0Woas6IalsJvMUH32Ok",
+      "ChatId": "-1001137522472"
+    }
   }
 }
