--- a/Healthcare020.Mobile/Healthcare020.Mobile.Android/Healthcare020.Mobile.Android.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.Android/Healthcare020.Mobile.Android.csproj
@@ -92,6 +92,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Effects\FocusEffect.cs" />
     <Compile Include="Helpers\Hud.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MainApplication.cs" />
