--- a/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
@@ -135,4 +135,8 @@
       <DependentUpon>ChangePasswordPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CustomViews\" />
+  </ItemGroup>
 </Project>
