Implemented reusable custom collection view with MainCollection property of type ObservableCollection and generic type of item CollectionViewItem

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
@@ -46,6 +46,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="CustomViews\CustomCollectionView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\AppResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
@@ -134,9 +137,5 @@
     <Compile Update="Views\ChangePasswordPage.xaml.cs">
       <DependentUpon>ChangePasswordPage.xaml</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="CustomViews\" />
   </ItemGroup>
 </Project>
