--- a/Healthcare020.WinUI/packages.config
+++ b/Healthcare020.WinUI/packages.config
@@ -22,6 +22,7 @@
   <package id="NLog" version="4.7.2" targetFramework="net472" />
   <package id="NLog.Config" version="4.7.2" targetFramework="net472" />
   <package id="NLog.Schema" version="4.7.2" targetFramework="net472" />
+  <package id="NLog.Windows.Forms" version="4.3.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
