Implemented Face ID authentication. On the User Login page (Patients), there is a Login with the FaceID option. The user opens the camera and needs to take a selfie and log in with using a face identification. In order for the user to log in using his FaceID, if the face identification is successful, a successful identification using the API is recorded from the mobile application. During this log, the API requires a Key to be sent from a mobile application, encrypted with RSA encryption (4096bit), using a public key. The API has a private key and upon receipt of the request with the record, the API will decrypt the key and verify that the secret is correct. This security measure is intended to prevent unauthorized recording of successful face identifications. FaceID API used in this implementation is Face API from Azure Cognitive Services.

--- a/HealthCare020.Services/HealthCare020.Services.csproj
+++ b/HealthCare020.Services/HealthCare020.Services.csproj
@@ -27,7 +27,27 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Healthcare020.LoggerService\Healthcare020.LoggerService.csproj" />
     <ProjectReference Include="..\HealthCare020.Repository\HealthCare020.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ServiceModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Security\SecurityResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SecurityResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Security\SecurityResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SecurityResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
