--- a/Healthcare020.LoggerService/nlog.config
+++ b/Healthcare020.LoggerService/nlog.config
@@ -7,7 +7,9 @@
   <targets>
     <target name="logfile" xsi:type="File"
             fileName="C:/Temp/logs/${shortdate}_logfile.txt"
-            layout="${longdate} ${level:uppercase=true} ${message}"/>
+            layout="Date and time: ${longdate}
+            Level: ${level} Message: ${message}
+            Stack trace: ${exception:format=Message,StackTrace}"/>
   </targets>
 
   <rules>
