--- a/Healthcare020.Mobile/Healthcare020.Mobile.Android/Properties/AndroidManifest.xml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.Android/Properties/AndroidManifest.xml
@@ -1,18 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.healthcare020.mobile" android:installLocation="auto">
-  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-  <application android:label="Healthcare020.Mobile.Android" android:icon="@drawable/healthcare020_200x200"></application>
-  <application android:allowBackup="false"></application>
-  <application>
-    <provider android:name="android.support.v4.content.FileProvider"
-                      android:authorities="${applicationId}.fileprovider"
-                      android:exported="false"
-                      android:grantUriPermissions="true">
-      <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                 android:resource="@xml/file_paths"></meta-data>
-    </provider>
-  </application>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.CAMERA" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+	<application android:label="Healthcare020.Mobile.Android" android:icon="@drawable/healthcare020_200x200">
+    <provider android:name="android.support.v4.content.FileProvider" android:authorities="com.companyname.healthcare020.mobile.fileprovider" android:exported="false" android:grantUriPermissions="true">
+      <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+    </provider>
+  </application>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.CAMERA" />
 </manifest>
