--- a/Healthcare020.Mobile/Healthcare020.Mobile.UWP/Healthcare020.Mobile.UWP.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.UWP/Healthcare020.Mobile.UWP.csproj
@@ -165,6 +165,9 @@
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
       <Version>3.0.4</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Buttons">
       <Version>18.1.0.59</Version>
     </PackageReference>
