Implemented a page to set a new password. Also, when changing the password, an animation will be displayed. Implemented validation for input fields when changing passwords (new and old passwords must be different, etc.). The user's Face is now added to the Patients (Azure FaceAPI) person group, each time the profile picture is replaced.

--- a/Healthcare020.Mobile/Healthcare020.Mobile.UWP/Healthcare020.Mobile.UWP.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.UWP/Healthcare020.Mobile.UWP.csproj
@@ -114,6 +114,7 @@
     <Content Include="Assets\Healthcare020_Logo_250x250.png" />
     <Content Include="Assets\Healthcare020_120x120.png" />
     <AndroidResource Include="Assets\logout_btn.png" />
+    <AndroidResource Include="Assets\security.png" />
     <Content Include="Assets\welcome_Poseta.png" />
     <Content Include="Assets\welcome_stetoscope.png" />
     <Content Include="Properties\Default.rd.xml" />
@@ -226,6 +227,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\pregled-animation.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\password-animation.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\pw-animation.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\key-animation.json" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
