--- a/Healthcare020.Mobile/Healthcare020.Mobile.Android/Healthcare020.Mobile.Android.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile.Android/Healthcare020.Mobile.Android.csproj
@@ -120,6 +120,8 @@
     <AndroidAsset Include="Assets\welcome_animationview.json" />
     <AndroidAsset Include="Assets\letter-pack-animation.json" />
     <AndroidAsset Include="Assets\pregled-animation.json" />
+    <AndroidAsset Include="Assets\pw-animation.json" />
+    <AndroidAsset Include="Assets\key-animation.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -210,10 +212,13 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logout_btn.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\security.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionHealthcare020MobileAndroidHideInfoBar="True" XamarinHotReloadUnhandledDeviceExceptionHealthcare020MobileAndroidHideInfoBar="True" />
+      <UserProperties XamarinHotReloadUnhandledDeviceExceptionHealthcare020MobileAndroidHideInfoBar="True" XamarinHotReloadDebuggerTimeoutExceptionHealthcare020MobileAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
