Implemented a collaborative-filtering recommendation system, using ML.NET framework. The matrix factorization algorithm was used in the implementation. The patient's year of birth (Godiste) was used as a matrix column, and VrijemeUid (unit = 30 minutes, based on the time of the examination in relation to the range from the beginning to the end of working time, formula =>  currentSeconds-540/30). MOBILE => Implemented password verification when deleting a patient-user account.

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Healthcare020.Mobile.csproj
@@ -80,6 +80,9 @@
     <EmbeddedResource Update="Views\Dialogs\AnimationDialogPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Dialogs\PasswordCheckDialogPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Dialogs\PregledDialogPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
