--- a/HealthCare020.Services/HealthCare020.Services.csproj
+++ b/HealthCare020.Services/HealthCare020.Services.csproj
@@ -20,6 +20,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.ML" Version="1.5.1" />
+    <PackageReference Include="Microsoft.ML.Recommender" Version="0.17.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Nexmo.Csharp.Client" Version="5.1.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
@@ -54,10 +56,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SecurityResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ServiceModels\" />
   </ItemGroup>
 
 </Project>
