Implemented the use of the recommendation system on the Desktop application, when scheduling a medical examination

--- a/HealthCare020.API/HealthCare020.API.csproj
+++ b/HealthCare020.API/HealthCare020.API.csproj
@@ -47,5 +47,11 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\vrijemepregledaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
