Changed directory for logs

--- a/Healthcare020.LoggerService/nlog.config
+++ b/Healthcare020.LoggerService/nlog.config
@@ -2,11 +2,11 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="c:\temp\nlog-internal.log">
+      internalLogFile="${CurrentDir}\logs\nlog-internal.log">
 
   <targets>
     <target name="logfile" xsi:type="File"
-            fileName="C:/Temp/logs/${shortdate}_logfile.txt"
+            fileName="${CurrentDir}/logs/${shortdate}_logfile.txt"
             layout="Date and time: ${longdate}
             Level: ${level} Message: ${message}
             Stack trace: ${exception:format=Message,StackTrace}"/>
