--- a/Healthcare020.OAuth/Healthcare020.OAuth.csproj
+++ b/Healthcare020.OAuth/Healthcare020.OAuth.csproj
@@ -16,4 +16,19 @@
     <ProjectReference Include="..\HealthCare020.Services\HealthCare020.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
