Updated DB name and data seed

--- a/HealthCare020.API/appsettings.json
+++ b/HealthCare020.API/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Healthcare020": "Server=.;Database=Healthcare020;Integrated Security=true;"
+    "Healthcare020": "Server=.;Database=160262;Integrated Security=true;"
   }
 }
