--- a/Healthcare020.OAuth/appsettings.Production.json
+++ b/Healthcare020.OAuth/appsettings.Production.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Healthcare020": "Server=healthcare-sql,1433;Database=Healthcare020_DB;User=sa;Password=Banana_123!;"
+    "Healthcare020": "Server=healthcare-sql,1433;Database=160262;User=sa;Password=Banana_123!;"
   }
 }
