--- a/Healthcare020.OAuth/appsettings.json
+++ b/Healthcare020.OAuth/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Healthcare020": "Server=.;Database=Healthcare020;Integrated Security=true;"
+    "Healthcare020": "Server=.;Database=160262;Integrated Security=true;"
   }
 }
